syntax = "proto3";
option go_package = "./auction";
option java_multiple_files = true;
option java_package = "io.grpc.examples.routeguide";
option java_outer_classname = "RouteGuideProto";
package auction;

service Auction {
    rpc Bid(Amount) returns (Acknowledgement) {}
    rpc Result(IsServer) returns (Outcome) {}
}

message Amount {
    int32 amount = 1; 
    bool isServer = 2;
    int32 clientID = 3; 
}

message Acknowledgement {
    bool success = 1; 
    int32 exception = 2; 
}

message Outcome {
    bool auctionover = 1; 
    int32 maxBid = 2; 
    int32 clientID = 3; 
}

message IsServer {
    bool isServer = 1; 
}